--- a/bootcamp/materials/1-dimensional-data-modeling/docker-compose.yml
+++ b/bootcamp/materials/1-dimensional-data-modeling/docker-compose.yml
@@ -16,7 +16,6 @@ services:
       - ./data.dump:/docker-entrypoint-initdb.d/data.dump
       - ./scripts/init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
       - postgres-data:/var/lib/postgresql/data
-    
   pgadmin:
     image: dpage/pgadmin4
     restart: on-failure
@@ -24,10 +23,10 @@ services:
     environment:
       - PGADMIN_DEFAULT_EMAIL=123@gmail.com
       - PGADMIN_DEFAULT_PASSWORD=postgres
-    ports: 
+    ports:
       - "${PGADMIN_PORT}:80"
-    depends_on:
-      - postgres
-
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
 volumes:
   postgres-data:
+  pgadmin-data:
